# speech2textrmeARM64

./: .gitignore  NATIVE_PATH.md  README_new.md  README_old.md  audio_processor.py  benchmark_native.py  build_native.bat  check_msvc_arm64.bat  document_generator.py  gui.py  native_backend.py  onnx_qnn_transcriber.py  pyproject.toml  relocate_to_c_root.bat  requirements.txt  run.bat  setup.py  setup_full_pipeline.bat  test_native_pipeline.py  test_system.py  transcribe.py  transcribe_qnn_native.py  transcribe_temp.py  whisper_npu.py  windows_speech.py
.github/: copilot-instructions.md
npu/: README_QNN.md
rust_mel/: Cargo.toml
rust_mel/src/: lib.rs
rust_tokenizer/: Cargo.toml
rust_tokenizer/src/: lib.rs
scripts/: convert_whisper_to_onnx.py  transcribe_qnn.py
