[package]
name = "rust_mel"
version = "0.1.0"
edition = "2021"

[lib]
name = "mel_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
ndarray = { version = "0.15", features = ["rayon"] }
realfft = "0.23"
rayon = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[build-dependencies]
pyo3-build-config = "0.21"
