[package]
name = "rust_tokenizer"
version = "0.1.0"
edition = "2021"

[lib]
name = "tokenizer_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.15", default-features = false, features = ["onig","http"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[build-dependencies]
pyo3-build-config = "0.21"
